# delta-operator

./: Cargo.toml  LICENSE  README.md  Tiltfile
.github/workflows/: grcov.yml  release.yml  tag.yml
controller/: Cargo.toml
controller/src/: app.rs  error.rs  main.rs
controller/src/controller/: host.rs  mod.rs  state.rs
crd/: Cargo.toml
crd/src/: crdgen.rs  lib.rs  maintenance.rs
docker/controller/: Dockerfile  Dockerfile.alpine
docker/worker/: Dockerfile  Dockerfile.alpine
manifests/kubernetes/development/: kustomization.yaml
manifests/kubernetes/development/infrastructure/: kustomization.yaml  service.azurite.delta-operator-system.yaml
manifests/kubernetes/development/infrastructure/azurite/: deployment.azurite.yaml  kustomization.yaml  service.azurite.yaml
manifests/kubernetes/development/infrastructure/localstack/: deployment.localstack.yaml  kustomization.yaml  service.localstack.yaml
manifests/kubernetes/development/infrastructure/storage-init/: setup.sh
manifests/kubernetes/development/tables/: deltatable.azure-clowns.yaml  deltatable.azure-emails.yaml  deltatable.localstack-clowns.yaml  kustomization.yaml
manifests/kubernetes/production/: crdv1.deltatable.yaml  deployment.delta-operator.yaml  kustomization.yaml  namespace.delta-operator-system.yaml  rbac.delta-operator.yaml  service.delta-operator.yaml
worker/: Cargo.toml
worker/src/: app.rs  main.rs
