[package]
name = "delta-operator"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-prometheus = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4", features = ["color", "derive", "env"] }
delta-operator-crd = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true, default-features = false, features = [
    "v1_23",
] }
kube = { workspace = true, default-features = false, features = ["client", "runtime", "derive", "rustls-tls", "ws"] }
schemars = { workspace = true }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }